uncomment section for eclipse

--- a/pom.xml
+++ b/pom.xml
@@ -581,87 +581,87 @@
                     <groupId>org.eclipse.m2e</groupId>
                     <artifactId>lifecycle-mapping</artifactId>
                     <version>1.0.0</version>
-                    <!--<configuration>-->
-                    <!--<lifecycleMappingMetadata>-->
-                    <!--<pluginExecutions>-->
-                    <!--<pluginExecution>-->
-                    <!--<pluginExecutionFilter>-->
-                    <!--<groupId>org.codehaus.mojo</groupId>-->
-                    <!--<artifactId>gwt-maven-plugin</artifactId>-->
-                    <!--<versionRange>[2.4.0,)</versionRange>-->
-                    <!--<goals>-->
-                    <!--<goal>resources</goal>-->
-                    <!--<goal>compile</goal>-->
-                    <!--<goal>i18n</goal>-->
-                    <!--<goal>generateAsync</goal>-->
-                    <!--</goals>-->
-                    <!--</pluginExecutionFilter>-->
-                    <!--<action>-->
-                    <!--<execute />-->
-                    <!--</action>-->
-                    <!--</pluginExecution>-->
-                    <!--<pluginExecution>-->
-                    <!--<pluginExecutionFilter>-->
-                    <!--<groupId>org.apache.maven.plugins</groupId>-->
-                    <!--<artifactId>maven-war-plugin</artifactId>-->
-                    <!--&lt;!&ndash; 2.1.1 copy the resources twice use 2.0.1 &ndash;&gt;-->
-                    <!--<versionRange>[2.0.1,)</versionRange>-->
-                    <!--<goals>-->
-                    <!--<goal>exploded</goal>-->
-                    <!--</goals>-->
-                    <!--</pluginExecutionFilter>-->
-                    <!--<action>-->
-                    <!--<execute />-->
-                    <!--</action>-->
-                    <!--</pluginExecution>-->
+                    <configuration>
+                    <lifecycleMappingMetadata>
+                    <pluginExecutions>
+                    <pluginExecution>
+                    <pluginExecutionFilter>
+                    <groupId>org.codehaus.mojo</groupId>
+                    <artifactId>gwt-maven-plugin</artifactId>
+                    <versionRange>[2.4.0,)</versionRange>
+                    <goals>
+                    <goal>resources</goal>
+                    <goal>compile</goal>
+                    <goal>i18n</goal>
+                    <goal>generateAsync</goal>
+                    </goals>
+                    </pluginExecutionFilter>
+                    <action>
+                    <execute />
+                    </action>
+                    </pluginExecution>
+                    <pluginExecution>
+                    <pluginExecutionFilter>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-war-plugin</artifactId>
+                    <!-- 2.1.1 copy the resources twice use 2.0.1 -->
+                    <versionRange>[2.0.1,)</versionRange>
+                    <goals>
+                    <goal>exploded</goal>
+                    </goals>
+                    </pluginExecutionFilter>
+                    <action>
+                    <execute />
+                    </action>
+                    </pluginExecution>
 
-                    <!--<pluginExecution>-->
-                    <!--<pluginExecutionFilter>-->
-                    <!--<groupId>org.codehaus.mojo</groupId>-->
-                    <!--<artifactId>build-helper-maven-plugin</artifactId>-->
-                    <!--<versionRange>[1.7,)</versionRange>-->
-                    <!--<goals>-->
-                    <!--<goal>add-source</goal>-->
-                    <!--</goals>-->
-                    <!--</pluginExecutionFilter>-->
-                    <!--<action>-->
-                    <!--<execute />-->
-                    <!--</action>-->
-                    <!--</pluginExecution>-->
+                    <pluginExecution>
+                    <pluginExecutionFilter>
+                    <groupId>org.codehaus.mojo</groupId>
+                    <artifactId>build-helper-maven-plugin</artifactId>
+                    <versionRange>[1.7,)</versionRange>
+                    <goals>
+                    <goal>add-source</goal>
+                    </goals>
+                    </pluginExecutionFilter>
+                    <action>
+                    <execute />
+                    </action>
+                    </pluginExecution>
 
-                    <!--<pluginExecution>-->
-                    <!--<pluginExecutionFilter>-->
-                    <!--<groupId>com.google.code.maven-replacer-plugin</groupId>-->
-                    <!--<artifactId>replacer</artifactId>-->
-                    <!--<versionRange>[1.5.2,)</versionRange>-->
-                    <!--<goals>-->
-                    <!--<goal>replace</goal>-->
-                    <!--</goals>-->
-                    <!--</pluginExecutionFilter>-->
-                    <!--<action>-->
-                    <!--<execute />-->
-                    <!--</action>-->
-                    <!--</pluginExecution>-->
+                    <pluginExecution>
+                    <pluginExecutionFilter>
+                    <groupId>com.google.code.maven-replacer-plugin</groupId>
+                    <artifactId>replacer</artifactId>
+                    <versionRange>[1.5.2,)</versionRange>
+                    <goals>
+                    <goal>replace</goal>
+                    </goals>
+                    </pluginExecutionFilter>
+                    <action>
+                    <execute />
+                    </action>
+                    </pluginExecution>
 
-                    <!--<pluginExecution>-->
-                    <!--<pluginExecutionFilter>-->
-                    <!--<groupId>com.samaxes.maven</groupId>-->
-                    <!--<artifactId>minify-maven-plugin</artifactId>-->
-                    <!--<versionRange>[1.0.0,)</versionRange>-->
-                    <!--<goals>-->
-                    <!--<goal>minify</goal>-->
-                    <!--</goals>-->
-                    <!--</pluginExecutionFilter>-->
-                    <!--<action>-->
-                    <!--<execute>-->
-                    <!--<runOnIncremental>false</runOnIncremental>-->
-                    <!--</execute>-->
-                    <!--</action>-->
-                    <!--</pluginExecution>-->
+                    <pluginExecution>
+                    <pluginExecutionFilter>
+                    <groupId>com.samaxes.maven</groupId>
+                    <artifactId>minify-maven-plugin</artifactId>
+                    <versionRange>[1.0.0,)</versionRange>
+                    <goals>
+                    <goal>minify</goal>
+                    </goals>
+                    </pluginExecutionFilter>
+                    <action>
+                    <execute>
+                    <runOnIncremental>false</runOnIncremental>
+                    </execute>
+                    </action>
+                    </pluginExecution>
 
-                    <!--</pluginExecutions>-->
-                    <!--</lifecycleMappingMetadata>-->
-                    <!--</configuration>-->
+                    </pluginExecutions>
+                    </lifecycleMappingMetadata>
+                    </configuration>
                 </plugin>
 
                 <plugin>
