--- a/src/test/resources/testConfig.properties
+++ b/src/test/resources/testConfig.properties
@@ -49,3 +49,5 @@ seleniumUrl=http://mi-selenium-mac.windows.ebi.ac.uk:4444/wd/hub
 desiredCapabilities=firefoxDesiredCapabilities
 # desiredCapabilities=iexploreDesiredCapabilities
 # desiredCapabilities=safariDesiredCapabilities
+
+datasourcesConfig=devDatasourcesConfig.properties
