--- a/pom.xml
+++ b/pom.xml
@@ -815,6 +815,7 @@
                             <includes>
                                 <include>**/web.xml</include>
                                 <include>**/app-config.xml</include>
+                                <include>**/test-config.xml</include>
                                 <include>**/index-app-config.xml</include>
                                 <include>**/views/404.jsp</include>
                                 <include>**/views/identifierError.jsp</include>
@@ -1106,6 +1107,16 @@
             </properties>
 
             <build>
+                <resources>
+                    <resource>
+                        <directory>src/test/resources</directory>
+                        <targetPath>${basedir}/target/test-classes</targetPath>
+                        <includes>
+                            <include>**/test-config.xml</include>
+                        </includes>
+                        <filtering>true</filtering>
+                    </resource>
+                </resources>
                 <pluginManagement>
                     <plugins>
                         <plugin>
