add missing declaration to test.properties file

--- a/src/test/resources/testConfig.properties
+++ b/src/test/resources/testConfig.properties
@@ -12,6 +12,7 @@ internalSolrUrl=http://ves-ebi-d0.ebi.ac.uk:8090/mi/impc/dev/solr
 drupalBaseUrl=https://dev.mousephenotype.org
 mediaBaseUrl=https://dev.mousephenotype.org/data/media
 deploymentPath=/phenotype-archive
+buildIndexesSolrUrl=http://ves-ebi-d0.ebi.ac.uk:8090/build_indexes
 liveSite=false
 
 
