--- a/src/main/resources/appConfig.properties
+++ b/src/main/resources/appConfig.properties
@@ -19,5 +19,6 @@ mediaBaseUrl=http://wwwdev.ebi.ac.uk/mi/impc/dev/phenotype-archive/media
 googleAnalytics=UA-33310077-1
 liveSite=false
 impcMediaBaseUrl=http://wwwdev.ebi.ac.uk/mi/media/omero/webgateway
+pdfThumbnailUrl=//wwwdev.ebi.ac.uk/mi/media/omero/webgateway/render_thumbnail/119501
 phenodigm.solrserver=http://solrclouddev.sanger.ac.uk/solr/phenodigm
 imits.solrserver=http://ikmc.vm.bytemark.co.uk:8983/solr/allele2
