changed solrUrl back to being wwwdev by default as most of us don't have a local solr

--- a/src/main/resources/appConfig.properties
+++ b/src/main/resources/appConfig.properties
@@ -3,8 +3,8 @@ baseUrl=/PhenotypeArchive
 deploymentPath=/phenotype-archive
 
 # change both solrUrl and internalSolrUrl to point to new place (OR POM file)
-#solrUrl=http://wwwdev.ebi.ac.uk/mi/impc/dev/solr
-solrUrl=http://localhost:8090/solr
+solrUrl=http://wwwdev.ebi.ac.uk/mi/impc/dev/solr
+#solrUrl=http://localhost:8090/solr
 internalSolrUrl=http://wwwdev.ebi.ac.uk/mi/impc/dev/solr
 buildIndexesSolrUrl=http://ves-ebi-d0.ebi.ac.uk:8090/build_indexes
 #preqcXmlfile=/nfs/web-hx/webadmin/tomcat/bases/mouseinformatics/solr_home_phenotypes_test/datafiles/PhenotypeCallSummary.xml
