--- a/pom.xml
+++ b/pom.xml
@@ -275,6 +275,19 @@
             <version>${spring.version}</version>
         </dependency>
 
+		<!-- Apache Commons Upload -->
+        <dependency>
+           <groupId>commons-fileupload</groupId>
+           <artifactId>commons-fileupload</artifactId>
+           <version>1.2.2</version>
+        </dependency>
+
+        <!-- Apache Commons Upload -->
+        <dependency>
+           <groupId>commons-io</groupId>
+           <artifactId>commons-io</artifactId>
+           <version>1.3.2</version>
+        </dependency>
 
         <!-- DB Dependencies -->
 
